Updated Report - State of the Art

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -140,4 +140,68 @@ and Khatib, Oussama},
   hal_id              = {tel-01134313},
   hal_version         = {v1}
 }
+
+@inproceedings{zhang2014motion,
+  title        = {Motion planning and control of ladder climbing on DRC-Hubo for DARPA Robotics Challenge},
+  author       = {Zhang, Yajia and Luo, Jingru and Hauser, Kris and Park, H Andy and Paldhe, Manas and Lee, CS George and Ellenberg, Robert and Killen, Brittany and Oh, Paul and Oh, Jun Ho and others},
+  booktitle    = {2014 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages        = {2086--2086},
+  year         = {2014},
+  organization = {IEEE}
+}
+
+@article{yoshida2008planning,
+  title     = {Planning 3-d collision-free dynamic robotic motion through iterative reshaping},
+  author    = {Yoshida, Eiichi and Esteves, Claudia and Belousov, Igor and Laumond, Jean-Paul and Sakaguchi, Takeshi and Yokoi, Kazuhito},
+  journal   = {IEEE Transactions on Robotics},
+  volume    = {24},
+  number    = {5},
+  pages     = {1186--1198},
+  year      = {2008},
+  publisher = {IEEE}
+}
+
+@article{hauser2010multi,
+  title     = {Multi-modal motion planning in non-expansive spaces},
+  author    = {Hauser, Kris and Latombe, Jean-Claude},
+  journal   = {The International Journal of Robotics Research},
+  volume    = {29},
+  number    = {7},
+  pages     = {897--915},
+  year      = {2010},
+  publisher = {SAGE Publications Sage UK: London, England}
+}
+
+@book{murray2017mathematical,
+  title     = {A mathematical introduction to robotic manipulation},
+  author    = {Murray, Richard M and Li, Zexiang and Sastry, S Shankar},
+  year      = {2017},
+  publisher = {CRC press}
+}
+
+@phdthesis{montecillopuente:tel-00538681,
+  title               = {{Human motion transfer on humanoid robot.}},
+  author              = {Montecillo Puente, Francisco Javier},
+  url                 = {https://tel.archives-ouvertes.fr/tel-00538681},
+  hal_local_reference = {Rapport LAAS n{\textdegree}10614},
+  school              = {{Institut National Polytechnique de Toulouse - INPT}},
+  year                = {2010},
+  month               = Sep,
+  keywords            = {Robotics ; Humanoid robot ; Human motion ; Robotique ; Robotique humanoide ; Mouvement humain ; Imitation},
+  type                = {Theses},
+  pdf                 = {https://tel.archives-ouvertes.fr/tel-00538681/file/Thesis.pdf},
+  hal_id              = {tel-00538681},
+  hal_version         = {v1}
+}
+
+@article{khatib1987unified,
+  title     = {A unified approach for motion and force control of robot manipulators: The operational space formulation},
+  author    = {Khatib, Oussama},
+  journal   = {IEEE Journal on Robotics and Automation},
+  volume    = {3},
+  number    = {1},
+  pages     = {43--53},
+  year      = {1987},
+  publisher = {IEEE}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
