--- a/report/dynamcis_based_imitation.tex
+++ b/report/dynamcis_based_imitation.tex
@@ -3,9 +3,17 @@
 \section{Dynamic Considerations}
 \subsection{Rigid body constraints}
 \subsection{Multi body constraints}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.175]{images/humanoid-rigid-bodies.png}\hfill
+    \caption{A rigid-body representation of humanoid robot}\hfill
+    \label{humanoid-rigid-body}
+\end{figure}
+
 \subsection{ZMP}
 \subsection{Dynamic Model of humanoid robot}
-\subsection{Simplied dynamic model using LIPM}
+\subsection{Simplified dynamic model using LIPM}
 
 \section{Control Approach}
 \subsection{Balance Control}
