--- a/report/report.tex
+++ b/report/report.tex
@@ -62,6 +62,7 @@
 
 \begin{tabular}{p{3cm}p{10cm}}
 CoM & Centre of Mass \\
+DoF & Degrees of Freedom \\
 ZMP & Zero Moment Point \\
 
 \end{tabular}
