Updated Report - State of the Art- Approaches

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -204,4 +204,126 @@ and Khatib, Oussama},
   year      = {1987},
   publisher = {IEEE}
 }
+
+@book{nakamura1990advanced,
+  title     = {Advanced robotics: redundancy and optimization},
+  author    = {Nakamura, Yoshihiko},
+  year      = {1990},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+@inproceedings{gienger2005task,
+  title        = {Task-oriented whole body motion for humanoid robots},
+  author       = {Gienger, Michael and Janssen, Herbert and Goerick, Christian},
+  booktitle    = {5th IEEE-RAS International Conference on Humanoid Robots, 2005.},
+  pages        = {238--244},
+  year         = {2005},
+  organization = {IEEE}
+}
+
+@inproceedings{yoshida2006task,
+  title        = {Task-driven support polygon reshaping for humanoids},
+  author       = {Yoshida, Eiichi and Kanoun, Oussama and Esteves, Claudia and Laumond, Jean-Paul},
+  booktitle    = {2006 6th IEEE-RAS International Conference on Humanoid Robots},
+  pages        = {208--213},
+  year         = {2006},
+  organization = {IEEE}
+}
+
+@article{mansard2007task,
+  title     = {Task sequencing for high-level sensor-based control},
+  author    = {Mansard, Nicolas and Chaumette, Franois},
+  journal   = {IEEE Transactions on Robotics},
+  volume    = {23},
+  number    = {1},
+  pages     = {60--72},
+  year      = {2007},
+  publisher = {IEEE}
+}
+
+@inproceedings{kanoun2009prioritizing,
+  title        = {Prioritizing linear equality and inequality systems: application to local motion planning for redundant robots},
+  author       = {Kanoun, Oussama and Lamiraux, Florent and Wieber, Pierre-Brice and Kanehiro, Fumio and Yoshida, Eiichi and Laumond, Jean-Paul},
+  booktitle    = {2009 IEEE international conference on robotics and automation},
+  pages        = {2939--2944},
+  year         = {2009},
+  organization = {IEEE}
+}
+
+@article{escande2013planning,
+  title     = {Planning contact points for humanoid robots},
+  author    = {Escande, Adrien and Kheddar, Abderrahmane and Miossec, Sylvain},
+  journal   = {Robotics and Autonomous Systems},
+  volume    = {61},
+  number    = {5},
+  pages     = {428--442},
+  year      = {2013},
+  publisher = {Elsevier}
+}
+
+@inproceedings{jarquin2013real,
+  title        = {Real-time smooth task transitions for hierarchical inverse kinematics},
+  author       = {Jarqu{\'\i}n, Gerardo and Escande, Adrien and Arechavaleta, Gustavo and Moulard, Thomas and Yoshida, Eiichi and Parra-Vega, Vicente},
+  booktitle    = {2013 13th IEEE-RAS International Conference on Humanoid Robots (Humanoids)},
+  pages        = {528--533},
+  year         = {2013},
+  organization = {IEEE}
+}
+
+@inproceedings{featherstone2000robot,
+  title        = {Robot dynamics: equations and algorithms},
+  author       = {Featherstone, Roy and Orin, David},
+  booktitle    = {Proceedings 2000 ICRA. Millennium Conference. IEEE International Conference on Robotics and Automation. Symposia Proceedings (Cat. No. 00CH37065)},
+  volume       = {1},
+  pages        = {826--834},
+  year         = {2000},
+  organization = {IEEE}
+}
+
+@book{featherstone2014rigid,
+  title     = {Rigid body dynamics algorithms},
+  author    = {Featherstone, Roy},
+  year      = {2014},
+  publisher = {Springer}
+}
+
+@article{khatib2004whole,
+  title     = {Whole-body dynamic behavior and control of human-like robots},
+  author    = {Khatib, Oussama and Sentis, Luis and Park, Jaeheung and Warren, James},
+  journal   = {International Journal of Humanoid Robotics},
+  volume    = {1},
+  number    = {01},
+  pages     = {29--43},
+  year      = {2004},
+  publisher = {World Scientific}
+}
+
+@inproceedings{sentis2005control,
+  title        = {Control of free-floating humanoid robots through task prioritization},
+  author       = {Sentis, Luis and Khatib, Oussama},
+  booktitle    = {Proceedings of the 2005 IEEE International Conference on Robotics and Automation},
+  pages        = {1718--1723},
+  year         = {2005},
+  organization = {IEEE}
+}
+
+@inproceedings{popovic2004angular,
+  title        = {Angular momentum regulation during human walking: biomechanics and control},
+  author       = {Popovic, Marko and Hofmann, Andreas and Herr, Hugh},
+  booktitle    = {IEEE International Conference on Robotics and Automation, 2004. Proceedings. ICRA'04. 2004},
+  volume       = {3},
+  pages        = {2405--2411},
+  year         = {2004},
+  organization = {IEEE}
+}
+
+@inproceedings{kajita2003biped,
+  title        = {Biped walking pattern generation by using preview control of zero-moment point},
+  author       = {Kajita, Shuuji and Kanehiro, Fumio and Kaneko, Kenji and Fujiwara, Kiyoshi and Harada, Kensuke and Yokoi, Kazuhito and Hirukawa, Hirohisa},
+  booktitle    = {2003 IEEE International Conference on Robotics and Automation (Cat. No. 03CH37422)},
+  volume       = {2},
+  pages        = {1620--1626},
+  year         = {2003},
+  organization = {IEEE}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
