--- a/report/dynamcis_based_imitation.tex
+++ b/report/dynamcis_based_imitation.tex
@@ -1,6 +1,8 @@
 \chapter{Dynamics Based Whole Body Imitation}
+\label{chapter-3}
 
 \section{Dynamic Considerations}
+\label{dynamic-consideration}
 \subsection{Rigid body constraints}
 \subsection{Multi body constraints}
 
